Feat(Vacancy): Cleanup and revised logic for showing applicants